Fix alignment of the education graphics

--- a/src/views/Give/Give.scss
+++ b/src/views/Give/Give.scss
@@ -663,9 +663,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-content: center;
-  align-items: center;
-  padding-top: 16px;
+  align-items: flex-start;
+  margin-top: 16px;
 
   .message-text {
     color: #999999;
@@ -713,12 +712,6 @@
 }
 
 .ohm-modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  // Use decimal values to fix anti-aliasing in Chrome. Ridiculous.
-  transform: translate(-50.048%, -50.048%);
-
   &.medium {
     .manage-project-stats .MuiBox-root {
       padding-left: 10px;
